--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,73 +16,86 @@ jobs:
       fail-fast: false
       matrix: 
         cfg:
-          # gcc 10
+          # gcc 11/12
           - 
-            name: "ubuntu gcc 10 Debug"
-            os: ubuntu-latest
+            name: "ubuntu gcc 11 Debug"
+            os: ubuntu-22.04
             build_type: Debug
-            cc: gcc-10
-            cxx: g++-10
+            cc: gcc-11
+            cxx: g++-11
             codecov: true
           - 
-            name: "ubuntu gcc 10 Release"
-            os: ubuntu-latest
+            name: "ubuntu gcc 11 Release"
+            os: ubuntu-22.04
             build_type: Release
-            cc: gcc-10
-            cxx: g++-10
+            cc: gcc-11
+            cxx: g++-11
+          - 
+            name: "ubuntu gcc 12 Debug"
+            os: ubuntu-22.04
+            build_type: Debug
+            cc: gcc-12
+            cxx: g++-12
+            codecov: true
+          - 
+            name: "ubuntu gcc 12 Release"
+            os: ubuntu-22.04
+            build_type: Release
+            cc: gcc-12
+            cxx: g++-12
 
-          # clang 13 on ubuntu
+          # clang 15 on ubuntu
           - 
-            name: "ubuntu clang 13 Debug"
-            os: ubuntu-latest
+            name: "ubuntu clang 15 Debug"
+            os: ubuntu-22.04
             build_type: Debug
-            cc: clang-13
-            cxx: clang++-13
+            cc: clang-15
+            cxx: clang++-15
           - 
-            name: "ubuntu clang 13 Release"
-            os: ubuntu-latest
+            name: "ubuntu clang 15 Release"
+            os: ubuntu-22.04
             build_type: Release
-            cc: clang-13
-            cxx: clang++-13
+            cc: clang-15
+            cxx: clang++-15
           - 
-            name: "ubuntu clang 13 libcxx Debug"
-            os: ubuntu-latest
+            name: "ubuntu clang 15 libcxx Debug"
+            os: ubuntu-22.04
             build_type: Debug
-            cc: clang-13
-            cxx: clang++-13
+            cc: clang-15
+            cxx: clang++-15
             libcxx: true
           - 
-            name: "ubuntu clang 13 libcxx Release"
-            os: ubuntu-latest
+            name: "ubuntu clang 15 libcxx Release"
+            os: ubuntu-22.04
             build_type: Release
-            cc: clang-13
-            cxx: clang++-13
+            cc: clang-15
+            cxx: clang++-15
             libcxx: true
 
-          # clang 13 on macos
+          # clang 14 on macos
           - 
-            name: "macos clang 13 Debug"
-            os: macos-latest
+            name: "macos clang 14 Debug"
+            os: macos-12
             build_type: Debug
-            cc: /usr/local/opt/llvm/bin/clang-13
-            cxx: /usr/local/opt/llvm/bin/clang++
+            cc: /usr/local/opt/llvm@14/bin/clang-14
+            cxx: /usr/local/opt/llvm@14/bin/clang++
           - 
-            name: "macos clang 13 Release"
-            os: macos-latest
+            name: "macos clang 14 Release"
+            os: macos-12
             build_type: Release
-            cc: /usr/local/opt/llvm/bin/clang-13
-            cxx: /usr/local/opt/llvm/bin/clang++
+            cc: /usr/local/opt/llvm@14/bin/clang-14
+            cxx: /usr/local/opt/llvm@14/bin/clang++
 
-          # apple clang 13
+          # apple clang 14
           - 
-            name: "macos apple clang 13 Debug"
-            os: macos-latest
+            name: "macos apple clang 14 Debug"
+            os: macos-12
             build_type: Debug
             cc: clang
             cxx: clang++
           - 
-            name: "macos apple clang 13 Release"
-            os: macos-latest
+            name: "macos apple clang 14 Release"
+            os: macos-12
             build_type: Release
             cc: clang
             cxx: clang++
@@ -90,13 +103,25 @@ jobs:
           # msvc
           - 
             name: "windows msvc 2019 Debug"
-            os: windows-latest
+            os: windows-2019
             build_type: Debug
             cc: cl
             cxx: cl
           - 
             name: "windows msvc 2019 Release"
-            os: windows-latest
+            os: windows-2019
+            build_type: Release
+            cc: cl
+            cxx: cl
+          - 
+            name: "windows msvc 2022 Debug"
+            os: windows-2022
+            build_type: Debug
+            cc: cl
+            cxx: cl
+          - 
+            name: "windows msvc 2022 Release"
+            os: windows-2022
             build_type: Release
             cc: cl
             cxx: cl
@@ -115,21 +140,21 @@ jobs:
         id: init
         shell: bash
         run: |
-          llvm_tag=llvmorg-13.0.0
+          llvm_tag=llvmorg-15.0.6
           echo ::set-output name=llmv-version::$llvm_tag
           echo "LIBCXX_INSTALL_TAG=$llvm_tag" >> $GITHUB_ENV
           echo "LIBCXX_INSTALL_PATH=`pwd`/local" >> $GITHUB_ENV
 
-      # install clang 13 and libc++ if necessary
+      # install clang 15 and libc++ if necessary
       - 
-        name: "install clang 13"
-        if: startsWith(matrix.cfg.os, 'ubuntu') && (matrix.cfg.cxx == 'clang++-13')
+        name: "install clang 15"
+        if: startsWith(matrix.cfg.os, 'ubuntu') && (matrix.cfg.cxx == 'clang++-15')
         working-directory: "${{env.HOME}}"
         shell: bash
         run: |
           wget https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
-          sudo ./llvm.sh 13
+          sudo ./llvm.sh 15
 
       # cache the llvm installation
       -
@@ -166,8 +191,8 @@ jobs:
           cmake \
             -S llvm \
             -B build \
-            -D CMAKE_C_COMPILER=gcc-10 \
-            -D CMAKE_CXX_COMPILER=g++-10 \
+            -D CMAKE_C_COMPILER=gcc-12 \
+            -D CMAKE_CXX_COMPILER=g++-12 \
             -D LLVM_ENABLE_PROJECTS='libcxx;libcxxabi' \
             -D "CMAKE_INSTALL_PREFIX=${{env.LIBCXX_INSTALL_PATH}}" \
             -D CMAKE_BUILD_TYPE=Release \
@@ -182,7 +207,7 @@ jobs:
         run: |
           echo "CC=${{matrix.cfg.cc}}" >> $GITHUB_ENV
           echo "CXX=${{matrix.cfg.cxx}}" >> $GITHUB_ENV
-          if [[  ${{matrix.cfg.os}} != 'windows-latest' ]]; then
+          if [[ ${{matrix.cfg.os}} != windows-* ]]; then
 
             if [[ "x${{matrix.cfg.codecov}}" == "xtrue" ]]; then
               cov=" -D MKPOKER_ENABLE_CODE_COVERAGE=1"
@@ -192,9 +217,9 @@ jobs:
             if [[ ${{matrix.cfg.os}} == ubuntu-* && "x${{matrix.cfg.libcxx}}" == "xtrue" ]]; then
               echo "CXX_ARGS=-D \"CMAKE_CXX_FLAGS=-stdlib=libc++ -nostdinc++ -cxx-isystem ${{env.LIBCXX_INSTALL_PATH}}/include/c++/v1 -Wno-unused-command-line-argument\"" >> $GITHUB_ENV
               echo "LDD_ARGS=-D \"CMAKE_EXE_LINKER_FLAGS=-L ${{env.LIBCXX_INSTALL_PATH}}/lib -Wl,-rpath,${{env.LIBCXX_INSTALL_PATH}}/lib -lc++abi\"" >> $GITHUB_ENV
-            elif [[  ${{matrix.cfg.os}} == macos-* ]]; then
-              echo "CXX_ARGS=-D \"CMAKE_CXX_FLAGS=-stdlib=libc++ -nostdinc++ -cxx-isystem /usr/local/opt/llvm/include/c++/v1\"" >> $GITHUB_ENV
-              echo "LDD_ARGS=-D \"CMAKE_EXE_LINKER_FLAGS=-L /usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib -lc++abi\"" >> $GITHUB_ENV
+            elif [[ ${{matrix.cfg.os}} == macos-* ]]; then
+              echo "CXX_ARGS=-D \"CMAKE_CXX_FLAGS=-stdlib=libc++ -nostdinc++ -cxx-isystem /usr/local/opt/llvm@14/include/c++/v1\"" >> $GITHUB_ENV
+              echo "LDD_ARGS=-D \"CMAKE_EXE_LINKER_FLAGS=-L /usr/local/opt/llvm@14/lib -Wl,-rpath,/usr/local/opt/llvm@14/lib -lc++abi\"" >> $GITHUB_ENV
             fi
 
           else
@@ -239,4 +264,4 @@ jobs:
         shell: bash
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
-        run: "bash <(curl -s https://codecov.io/bash) -x gcov-10"
+        run: "bash <(curl -s https://codecov.io/bash) -x gcov-12"
