--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,7 +131,7 @@ jobs:
     ###################################################
     steps: 
       - 
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       # init install path and llvm version tag
       -
@@ -141,7 +141,7 @@ jobs:
         shell: bash
         run: |
           llvm_tag=llvmorg-15.0.6
-          echo ::set-output name=llmv-version::$llvm_tag
+          echo "llmv-version=$llvm_tag" >> $GITHUB_OUTPUT
           echo "LIBCXX_INSTALL_TAG=$llvm_tag" >> $GITHUB_ENV
           echo "LIBCXX_INSTALL_PATH=`pwd`/local" >> $GITHUB_ENV
 
@@ -160,7 +160,7 @@ jobs:
       -
         name: "cache llvm"
         if: matrix.cfg.libcxx
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: cache-llvm
         with:
           path: "${{env.LIBCXX_INSTALL_PATH}}"
@@ -171,7 +171,7 @@ jobs:
       -
         name: "checkout llvm"
         if: matrix.cfg.libcxx && steps.cache-llvm.outputs.cache-hit != 'true'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: llvm/llvm-project
           ref: ${{env.LIBCXX_INSTALL_TAG}}
@@ -186,17 +186,14 @@ jobs:
           cd llvm-project
 
           echo building libcxx from source...
-          # workaround for cmake 3.22 breaking libc++ install:
-          # -D CMAKE_BUILD_WITH_INSTALL_RPATH=ON
           cmake \
-            -S llvm \
+            -S runtimes \
             -B build \
             -D CMAKE_C_COMPILER=gcc-12 \
             -D CMAKE_CXX_COMPILER=g++-12 \
-            -D LLVM_ENABLE_PROJECTS='libcxx;libcxxabi' \
+            -D LLVM_ENABLE_RUNTIMES='libcxx;libcxxabi' \
             -D "CMAKE_INSTALL_PREFIX=${{env.LIBCXX_INSTALL_PATH}}" \
-            -D CMAKE_BUILD_TYPE=Release \
-            -D CMAKE_BUILD_WITH_INSTALL_RPATH=ON
+            -D CMAKE_BUILD_TYPE=Release
           cmake --build build --target install-cxx
           cmake --build build --target install-cxxabi
 
