--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,71 +1,63 @@
 name: CI
 
-on: 
-  push: 
-    branches: 
+on:
+  push:
+    branches:
       - main
-  pull_request: 
-    branches: 
+  pull_request:
+    branches:
       - main
 
-jobs: 
-  build: 
+jobs:
+  build:
     name: "${{matrix.cfg.name}}"
     runs-on: "${{matrix.cfg.os}}"
-    strategy: 
+    strategy:
       fail-fast: false
-      matrix: 
+      matrix:
         cfg:
           # gcc 11/12
-          - 
-            name: "ubuntu gcc 11 Debug"
+          - name: "ubuntu gcc 11 Debug"
             os: ubuntu-22.04
             build_type: Debug
             cc: gcc-11
             cxx: g++-11
             codecov: true
-          - 
-            name: "ubuntu gcc 11 Release"
+          - name: "ubuntu gcc 11 Release"
             os: ubuntu-22.04
             build_type: Release
             cc: gcc-11
             cxx: g++-11
-          - 
-            name: "ubuntu gcc 12 Debug"
+          - name: "ubuntu gcc 12 Debug"
             os: ubuntu-22.04
             build_type: Debug
             cc: gcc-12
             cxx: g++-12
             codecov: true
-          - 
-            name: "ubuntu gcc 12 Release"
+          - name: "ubuntu gcc 12 Release"
             os: ubuntu-22.04
             build_type: Release
             cc: gcc-12
             cxx: g++-12
 
           # clang 15 on ubuntu
-          - 
-            name: "ubuntu clang 15 Debug"
+          - name: "ubuntu clang 15 Debug"
             os: ubuntu-22.04
             build_type: Debug
             cc: clang-15
             cxx: clang++-15
-          - 
-            name: "ubuntu clang 15 Release"
+          - name: "ubuntu clang 15 Release"
             os: ubuntu-22.04
             build_type: Release
             cc: clang-15
             cxx: clang++-15
-          - 
-            name: "ubuntu clang 15 libcxx Debug"
+          - name: "ubuntu clang 15 libcxx Debug"
             os: ubuntu-22.04
             build_type: Debug
             cc: clang-15
             cxx: clang++-15
             libcxx: true
-          - 
-            name: "ubuntu clang 15 libcxx Release"
+          - name: "ubuntu clang 15 libcxx Release"
             os: ubuntu-22.04
             build_type: Release
             cc: clang-15
@@ -73,54 +65,46 @@ jobs:
             libcxx: true
 
           # clang 14 on macos
-          - 
-            name: "macos clang 14 Debug"
+          - name: "macos clang 15 Debug"
             os: macos-12
             build_type: Debug
-            cc: /usr/local/opt/llvm@14/bin/clang-14
-            cxx: /usr/local/opt/llvm@14/bin/clang++
-          - 
-            name: "macos clang 14 Release"
+            cc: /usr/local/opt/llvm@15/bin/clang-15
+            cxx: /usr/local/opt/llvm@15/bin/clang++
+          - name: "macos clang 15 Release"
             os: macos-12
             build_type: Release
-            cc: /usr/local/opt/llvm@14/bin/clang-14
-            cxx: /usr/local/opt/llvm@14/bin/clang++
+            cc: /usr/local/opt/llvm@15/bin/clang-15
+            cxx: /usr/local/opt/llvm@15/bin/clang++
 
           # apple clang 14
-          - 
-            name: "macos apple clang 14 Debug"
+          - name: "macos apple clang 14 Debug"
             os: macos-12
             build_type: Debug
             cc: clang
             cxx: clang++
-          - 
-            name: "macos apple clang 14 Release"
+          - name: "macos apple clang 14 Release"
             os: macos-12
             build_type: Release
             cc: clang
             cxx: clang++
 
           # msvc
-          - 
-            name: "windows msvc 2019 Debug"
+          - name: "windows msvc 2019 Debug"
             os: windows-2019
             build_type: Debug
             cc: cl
             cxx: cl
-          - 
-            name: "windows msvc 2019 Release"
+          - name: "windows msvc 2019 Release"
             os: windows-2019
             build_type: Release
             cc: cl
             cxx: cl
-          - 
-            name: "windows msvc 2022 Debug"
+          - name: "windows msvc 2022 Debug"
             os: windows-2022
             build_type: Debug
             cc: cl
             cxx: cl
-          - 
-            name: "windows msvc 2022 Release"
+          - name: "windows msvc 2022 Release"
             os: windows-2022
             build_type: Release
             cc: cl
@@ -129,13 +113,11 @@ jobs:
     ###################################################
     ## building steps
     ###################################################
-    steps: 
-      - 
-        uses: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v3
 
       # init install path and llvm version tag
-      -
-        name: "init libcxx env variables"
+      - name: "init libcxx env variables"
         if: matrix.cfg.libcxx
         id: init
         shell: bash
@@ -146,8 +128,7 @@ jobs:
           echo "LIBCXX_INSTALL_PATH=`pwd`/local" >> $GITHUB_ENV
 
       # install clang 15 and libc++ if necessary
-      - 
-        name: "install clang 15"
+      - name: "install clang 15"
         if: startsWith(matrix.cfg.os, 'ubuntu') && (matrix.cfg.cxx == 'clang++-15')
         working-directory: "${{env.HOME}}"
         shell: bash
@@ -157,8 +138,7 @@ jobs:
           sudo ./llvm.sh 15
 
       # cache the llvm installation
-      -
-        name: "cache llvm"
+      - name: "cache llvm"
         if: matrix.cfg.libcxx
         uses: actions/cache@v3
         id: cache-llvm
@@ -168,16 +148,14 @@ jobs:
           key: ${{runner.os}}-${{matrix.cfg.os}}-Release-${{steps.init.outputs.llmv-version}}
 
       # if not cached, actually build stuff
-      -
-        name: "checkout llvm"
+      - name: "checkout llvm"
         if: matrix.cfg.libcxx && steps.cache-llvm.outputs.cache-hit != 'true'
         uses: actions/checkout@v3
         with:
           repository: llvm/llvm-project
           ref: ${{env.LIBCXX_INSTALL_TAG}}
           path: llvm-project
-      - 
-        name: "install llvm libc++"
+      - name: "install llvm libc++"
         if: matrix.cfg.libcxx && steps.cache-llvm.outputs.cache-hit != 'true'
         shell: bash
         run: |
@@ -198,8 +176,7 @@ jobs:
           cmake --build build --target install-cxxabi
 
       # setup compiler for the main build steps
-      -
-        name: "setup compiler"
+      - name: "setup compiler"
         shell: bash
         run: |
           echo "CC=${{matrix.cfg.cc}}" >> $GITHUB_ENV
@@ -214,9 +191,9 @@ jobs:
             if [[ ${{matrix.cfg.os}} == ubuntu-* && "x${{matrix.cfg.libcxx}}" == "xtrue" ]]; then
               echo "CXX_ARGS=-D \"CMAKE_CXX_FLAGS=-stdlib=libc++ -nostdinc++ -cxx-isystem ${{env.LIBCXX_INSTALL_PATH}}/include/c++/v1 -Wno-unused-command-line-argument\"" >> $GITHUB_ENV
               echo "LDD_ARGS=-D \"CMAKE_EXE_LINKER_FLAGS=-L ${{env.LIBCXX_INSTALL_PATH}}/lib -Wl,-rpath,${{env.LIBCXX_INSTALL_PATH}}/lib -lc++abi\"" >> $GITHUB_ENV
-            elif [[ ${{matrix.cfg.os}} == macos-* ]]; then
-              echo "CXX_ARGS=-D \"CMAKE_CXX_FLAGS=-stdlib=libc++ -nostdinc++ -cxx-isystem /usr/local/opt/llvm@14/include/c++/v1\"" >> $GITHUB_ENV
-              echo "LDD_ARGS=-D \"CMAKE_EXE_LINKER_FLAGS=-L /usr/local/opt/llvm@14/lib -Wl,-rpath,/usr/local/opt/llvm@14/lib -lc++abi\"" >> $GITHUB_ENV
+            elif [[ ${{matrix.cfg.os}} == macos-* && "x${{matrix.cfg.cc}}" == "/usr/local/opt/llvm@15/bin/clang-15" ]]; then
+              echo "CXX_ARGS=-D \"CMAKE_CXX_FLAGS=-stdlib=libc++ -nostdinc++ -cxx-isystem /usr/local/opt/llvm@15/include/c++/v1\"" >> $GITHUB_ENV
+              echo "LDD_ARGS=-D \"CMAKE_EXE_LINKER_FLAGS=-L /usr/local/opt/llvm@15/lib -Wl,-rpath,/usr/local/opt/llvm@15/lib -lc++abi\"" >> $GITHUB_ENV
             fi
 
           else
@@ -224,8 +201,7 @@ jobs:
           fi
 
       # at the moment non-msvc builds are 'mono config' and need the build_type set during config
-      - 
-        name: configure
+      - name: configure
         shell: bash
         run: |
           cmake \
@@ -237,8 +213,7 @@ jobs:
           ${{env.MKP_MONO}}
 
       # msvc is 'multi config' so we pass --config $build_type as arg here
-      - 
-        name: build
+      - name: build
         shell: bash
         run: |
           cmake \
@@ -247,16 +222,14 @@ jobs:
           -j1 -v
 
       # run tests with very verbose output
-      - 
-        name: run tests
+      - name: run tests
         shell: bash
         run: |
           cd build
           ctest -VV
 
       # code coverage is only available with gcc debug
-      - 
-        name: code coverage
+      - name: code coverage
         if: matrix.cfg.codecov
         shell: bash
         env:
